# newsflash

./: .gitignore  README.md
news-api/: Cargo.toml  Dockerfile
news-api/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
news-api/src/routes/: subscriptions.rs
news-api/tests/: health_check.rs
news-ui/: package-lock.json  package.json
newsflash-api/: Cargo.toml
newsflash-api/sql/: add_user.sql  get_users.sql  schema.sql
newsflash-api/src/: config.rs  db.rs  errors.rs  main.rs
newsflash-ui/: Cargo.toml  LICENSE-MIT  README.md
newsflash-ui/data/: 000009.sst  IDENTITY  MANIFEST-000005  OPTIONS-000007
