[package]
name = "news-api"
version = "0.1.0"
edition = "2024"
authors = ["Oleg Tchernov <otchernov@gmail.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.15.18"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.12.23"