[package]
name = "newsflash-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0.227", features = ["derive"] }
confik = "0.15"
deadpool-postgres = { version = "0.14", features = ["serde"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7"
derive_more = "2.0.1"
dotenv = "0.15"